<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseFragment">

    <EditText
        android:id="@+id/et_titluCurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/titlu_curs"
        app:layout_constraintBottom_toTopOf="@+id/tv_continutCurs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_adaugaCurs"
        app:layout_constraintVertical_bias="0.285" />

    <EditText
        android:id="@+id/et_continutCurs"
        android:layout_width="395dp"
        android:layout_height="73dp"
        android:ems="10"
        android:hint="@string/continut_curs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_continutCurs" />

    <TextView
        android:id="@+id/tv_tipCurs"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tip_curs"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_continutCurs"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="315dp"
        android:layout_height="66dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveCurs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_incepator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/incepator" />

        <RadioButton
            android:id="@+id/rb_mediu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediu" />

        <RadioButton
            android:id="@+id/rb_avansat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avansat" />

    </RadioGroup>




    <TextView
        android:id="@+id/tv_adaugaCurs"
        android:layout_width="415dp"
        android:layout_height="158dp"
        android:background="@drawable/adauga_curs_bgimg"
        android:gravity="center"
        android:text="@string/adauga_curs"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_titluCurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Titlu:"
        app:layout_constraintBottom_toTopOf="@+id/tv_titluCurs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_adaugaCurs"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/tv_continutCurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Continut:"
        app:layout_constraintBottom_toTopOf="@+id/et_continutCurs"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSaveCurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/salvare_curs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="UnknownId" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>